--- a/web/try.html
+++ b/web/try.html
@@ -315,6 +315,31 @@
         }
 
         /* ==== TOPBAR STYLES ==== */
+        .sidebar {
+  width: 250px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+}
+
+.topbar {
+  height: 70px;
+  margin-left: 250px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 250px;
+  background-color: #fff;
+  z-index: 999;
+}
+
+.content {
+  margin-left: 250px;
+  margin-top: 70px;
+  padding: 20px;
+}
+
         #topbar {
             height: var(--topbar-height);
             background: white;
